--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -12,13 +12,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Parque</title>
+    <title>Infatec</title>
 </head>
 
 <body>
     {{>_navbar}}
     {{!-- {{>_msg}} --}}
-    {{{body}}}
+    <div class="container mt-4">
+        {{{body}}}
+    </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
