--- a/app/views/view/direcao/home.handlebars
+++ b/app/views/view/direcao/home.handlebars
@@ -8,34 +8,44 @@
 <div class="card-deck">
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         {{!-- <div class="card-header">Cabeçalho</div> --}}
-        <div class="card-body">
-            <h5 class="card-title">Direção</h5>
-        </div>
+        <a href="/direcao/direcao">
+            <div class="card-body">
+                <h5 class="card-title">Direção</h5>
+            </div>
+        </a>
     </div>
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         {{!-- <div class="card-header">Cabeçalho</div> --}}
-        <div class="card-body">
-            <h5 class="card-title">Docente</h5>
-        </div>
+        <a href="/direcao/docente">
+            <div class="card-body">
+                <h5 class="card-title">Docente</h5>
+            </div>
+        </a>
     </div>
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         {{!-- <div class="card-header">Cabeçalho</div> --}}
-        <div class="card-body">
-            <h5 class="card-title">Aluno(a)</h5>
-        </div>
+        <a href="/direcao/aluno">
+            <div class="card-body">
+                <h5 class="card-title">Aluno(a)</h5>
+            </div>
+        </a>
     </div>
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         {{!-- <div class="card-header">Cabeçalho</div> --}}
-        <div class="card-body">
-            <h5 class="card-title">Disciplina</h5>
+        <a href="/direcao/disciplina">
+            <div class="card-body">
+                <h5 class="card-title">Disciplina</h5>
 
-        </div>
+            </div>
+        </a>
     </div>
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         {{!-- <div class="card-header">Cabeçalho</div> --}}
-        <div class="card-body">
-            <h5 class="card-title">Turma</h5>
+        <a href="/direcao/turma">
+            <div class="card-body">
+                <h5 class="card-title">Turma</h5>
 
-        </div>
+            </div>
+        </a>
     </div>
 </div>
