--- a/app/views/view/login/login.handlebars
+++ b/app/views/view/login/login.handlebars
@@ -1,25 +1,52 @@
-<!------ Include the above in your HEAD tag ---------->
+<!DOCTYPE html>
+<html lang="pt">
 
-<div class="wrapper fadeInDown">
-  <div id="formContent">
-    <!-- Tabs Titles -->
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/login.css">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  {{!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> --}}
 
-    <!-- Icon -->
-    {{!-- <div class="fadeIn first">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Infatec</title>
+</head>
+
+<body>
+  <!------ Include the above in your HEAD tag ---------->
+
+  <div class="wrapper fadeInDown">
+    <div id="formContent">
+      <!-- Tabs Titles -->
+
+      <!-- Icon -->
+      {{!-- <div class="fadeIn first">
       <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
     </div> --}}
 
-    <!-- Login Form -->
-    <form method="POST" action="/login">
-      <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
-      <input type="password" id="senha" class="fadeIn third" name="senha" placeholder="Senha">
-      <input type="submit" class="fadeIn fourth" value="Logar">
-    </form>
+      <!-- Login Form -->
+      <form method="POST" action="/login">
+        <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
+        <input type="password" id="senha" class="fadeIn third" name="senha" placeholder="Senha">
+        <input type="submit" class="fadeIn fourth" value="Logar">
+      </form>
 
-    <!-- Remind Passowrd -->
-    <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
+      <!-- Remind Passowrd -->
+      <div id="formFooter">
+        <a class="underlineHover" href="#">Forgot Password?</a>
+      </div>
+
     </div>
-
   </div>
-</div>
+
+</body>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="/js/bootstrap.js"></script>
+
+</html>
