Adicionado o criar diretor

--- a/app/views/view/direcao/direcao.handlebars
+++ b/app/views/view/direcao/direcao.handlebars
@@ -5,6 +5,7 @@
 Digite o nome
 <br>
 <br>
+<a href="cadastrar/direcao"><button type="button" class="btn btn-primary">Novo</button></a>
 <br>
 <br>
 <div class="table-responsive-sm">
