--- a/app/views/view/direcao/alterar.handlebars
+++ b/app/views/view/direcao/alterar.handlebars
@@ -5,7 +5,7 @@
     {{#each usuario}}
 
     
-    <form method="POST" action="/direcao/alterar/direcao">
+    <form method="POST" action="/direcao/alterar">
         <input type="hidden" name="id" value="{{id}}">
         <div class="form-group">
             <label for="inputAddress">Nome</label>
