--- a/app/views/view/direcao/turma/alterar.handlebars
+++ b/app/views/view/direcao/turma/alterar.handlebars
@@ -2,13 +2,17 @@
     <div align="center" class="form-group">
         <h2>Atualizar</h2>
     </div>
-    {{#each disciplina}}
+    {{#each turma}}
 
-    <form method="POST" action="/direcao/alterar/disciplina">
+    <form method="POST" action="/direcao/alterar/turma">
         <input type="hidden" name="id" value="{{id}}">
         <div class="form-group">
             <label for="inputAddress">Nome</label>
             <input type="text" class="form-control" name="nome" placeholder="João da Neves" value="{{nome}}">
+        </div>
+        <div class="form-group">
+            <label for="inputAddress">Ano</label>
+            <input type="text" class="form-control" name="ano" placeholder="1º Ano" value="{{ano}}">
         </div>
         <div class="form-group">
             <label for="inputAddress2">Criacao</label>
