--- a/app/views/view/direcao/alterar.handlebars
+++ b/app/views/view/direcao/alterar.handlebars
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
             <label for="inputAddress2">Nascimento</label>
-            <input type="text" class="form-control" name="nascimento" placeholder="30/03/1997" value="{{nascimento}}">
+            <input type="date" class="form-control" name="nascimento" placeholder="30/03/1997" value="{{nascimento}}">
         </div>
         <div class="form-group">
             <label for="inputEmail4">Email</label>
