--- a/app/views/view/direcao/docente/criar.handlebars
+++ b/app/views/view/direcao/docente/criar.handlebars
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group">
             <label for="inputAddress2">Nascimento</label>
-            <input type="text" class="form-control" name="nascimento" placeholder="30/03/1997"">
+            <input type="date" class="form-control" name="nascimento" placeholder="30/03/1997"">
         </div>
         <div class="form-group">
             <label for="inputEmail4">Email</label>
