--- a/app/views/view/direcao/turma/turma.handlebars
+++ b/app/views/view/direcao/turma/turma.handlebars
@@ -21,9 +21,9 @@ Digite o nome
         <tbody>
             {{#each turma}}
             <tr>
-                <td>{{this.nome}}</td>
-                <td>{{this.ano}}</td>
-                <td>{{this.criacao}}</td>
+                <td>{{nome}}</td>
+                <td>{{ano}}</td>
+                <td>{{criacao}}</td>
                 <td>
                     <a href="alterar/turma/{{this.id}}">Alterar</a>/
                     <a href="deletar/turma/{{this.id}}">Excluir</a>
