--- a/app/views/view/direcao/turma/alterar.handlebars
+++ b/app/views/view/direcao/turma/alterar.handlebars
@@ -16,7 +16,7 @@
         </div>
         <div class="form-group">
             <label for="inputAddress2">Criacao</label>
-            <input type="text" class="form-control" name="criacao" placeholder="30/03/1997" value="{{criacao}}">
+            <input type="date" class="form-control" name="criacao" placeholder="30/03/1997" value="{{criacao}}">
         </div>
         <button type="submit" class="btn btn-primary">Alterar</button>
     </form>
