--- a/app/views/view/direcao/turma/teste.handlebars
+++ b/app/views/view/direcao/turma/teste.handlebars
@@ -41,8 +41,9 @@ Digite o nome
     </table>
 </div>
 
-<form action="/" id="searchForm">
-    <input type="text" name="s" placeholder="Search...">
+<form action="/direcao/teste" method="POST">
+    <input type="text" name="id_doc" placeholder="Search...">
+    <input type="text" name="id_dis" placeholder="Search...">
     <input type="submit" value="Search">
 </form>
 
