--- a/app/views/partials/_navbar.handlebars
+++ b/app/views/partials/_navbar.handlebars
@@ -8,10 +8,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/direcao/turma">Turma <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/direcao/direcao">Direcao <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/direcao/aluno">Aluno <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/direcao/docente">Docente <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/direcao/disciplina">Disciplina <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/direcao/turma">Turma <span class="sr-only">(current)</span></a>
       </li>
 
   </div>
