--- a/app/views/view/login/login.handlebars
+++ b/app/views/view/login/login.handlebars
@@ -23,9 +23,9 @@
       <!-- Tabs Titles -->
 
       <!-- Icon -->
-      {{!-- <div class="fadeIn first">
-      <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
-    </div> --}}
+      <div class="fadeIn first">
+      <img src="https://image.freepik.com/vetores-gratis/fruta-e-lapis-de-maca-volta-para-escola-icon-ilustracao_138676-264.jpg" id="icon" alt="User Icon" />
+    </div>
 
       <!-- Login Form -->
       <form method="POST" action="/login">
