--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 
 <body>
     {{>_navbar}}
-    {{!-- {{>_msg}} --}}
+    {{>_msg}}
     <div class="container mt-4">
         {{{body}}}
     </div>
