--- a/app/views/view/direcao/turma/turma.handlebars
+++ b/app/views/view/direcao/turma/turma.handlebars
@@ -69,8 +69,12 @@ Digite o nome
                         <div data-spy="scroll">
                             <ul class="list-group">
 
-                               {{#multi_list letters numbers}}
-                               {{/multi_list}}
+
+                                <li class="list-group-item"> 
+                                    
+                                </li>
+                                {{!-- {{#multi_list letters numbers}}
+                                {{/multi_list}} --}}
 
                             </ul>
                         </div>
