--- a/app/views/view/login/esqueceu.handlebars
+++ b/app/views/view/login/esqueceu.handlebars
@@ -24,20 +24,20 @@
 
       <!-- Icon -->
       <div class="fadeIn first">
-      <img src="https://image.freepik.com/vetores-gratis/fruta-e-lapis-de-maca-volta-para-escola-icon-ilustracao_138676-264.jpg" id="icon" alt="User Icon" />
-    </div>
+        <img
+          src="https://image.freepik.com/vetores-gratis/fruta-e-lapis-de-maca-volta-para-escola-icon-ilustracao_138676-264.jpg"
+          id="icon" alt="User Icon" />
+      </div>
 
       <!-- Login Form -->
-      <form method="POST" action="/login">
-        <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
-        <input type="password" id="senha" class="fadeIn third" name="senha" placeholder="Senha">
-        <input type="submit" class="fadeIn fourth" value="Logar">
+      <form method="POST" action="/login/esqueceu">
+        <p class="h5">Digite seu email</p>
+
+        <input type="text" id="email" class="fadeIn third" name="email" placeholder="Email">
+        <input type="submit" class="fadeIn fourth" value="Enviar">
       </form>
 
-      <!-- Remind Passowrd -->
-      <div id="formFooter">
-        <a class="underlineHover" href="login/esqueceu">Esqueceu a senha?</a>
-      </div>
+
 
     </div>
   </div>
