--- a/app/views/partials/_navbar.handlebars
+++ b/app/views/partials/_navbar.handlebars
@@ -5,8 +5,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+    <ul class="navbar-nav mr-auto" id="barra">
       <li class="nav-item active">
         <a class="nav-link" href="/direcao/direcao">Direcao <span class="sr-only">(current)</span></a>
       </li>
