--- a/app/views/view/direcao/turma/criar.handlebars
+++ b/app/views/view/direcao/turma/criar.handlebars
@@ -74,7 +74,7 @@
                                 {{/each}}
                             </ul>
                         </div>
-                        <input type="text" id="campo">
+                        {{!-- <input type="text" id="campo"> --}}
 
                     </div>
                     <div class="modal-footer">
