--- a/app/views/view/direcao/turma/turma.handlebars
+++ b/app/views/view/direcao/turma/turma.handlebars
@@ -25,14 +25,14 @@ Digite o nome
                 <td>{{ano}}</td>
                 <td>{{criacao}}</td>
                 <td>
-                    <button id="btn" type="button" class="btn btn-primary mt-4" data-toggle="modal"
+                    {{!-- <button id="btn" type="button" class="btn btn-primary mt-4" data-toggle="modal"
                         data-target="#modalDocente{{id}}">
                         Ver Docentes
                     </button>
                     <button id="btn" type="button" class="btn btn-primary mt-4" data-toggle="modal"
                         data-target="#modalAluno{{id}}">
                         Ver Alunos
-                    </button>
+                    </button> --}}
                     <a href="alterar/turma/{{this.id}}">Alterar</a>/
                     <a href="deletar/turma/{{this.id}}">Excluir</a>/
                 </td>
